FIX: Remove Horizontal Scroll

--- a/statics.css
+++ b/statics.css
@@ -18,6 +18,8 @@ body{
     /* overflow-y: hidden;  */
     position: relative;
     min-height: 100%;
+
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
